# easy-bc

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  SECURITY.md  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  release-android.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
crates/planner-core/: Cargo.toml  MOBILE_FFI.md
crates/planner-core/examples/: narrative_json.rs  plan_stdin_json.rs  user_scenario.rs
crates/planner-core/src/: biology.rs  condoms.rs  ec.rs  error.rs  lib.rs  methods.rs  optimizer.rs  reference_curves.rs  types.rs
crates/planner-core/tests/: calendar_and_budget.rs  default_scenario.rs  golden.rs  properties.rs  replan_preview.rs  scenario_user.rs
crates/uniffi-bindgen/: Cargo.toml
docs/: github-pages-passkeys.md  incidents.md  risk-accounting-and-ec.md  sync-kit-extraction-handoff.md  ux-product-plan.md
ios/: README.md  build-xcframework.sh
ios/EasyBC/: ContentView.swift
scripts/: android-build-native.sh  compare-narrative.mjs  parity-fixtures.mjs  reference-planner.mjs  verify-gradle-wrapper.sh
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/pkg/: planner_core.d.ts  planner_core.js  planner_core_bg.wasm  planner_core_bg.wasm.d.ts
web/public/: privacy.html
web/src/: App.tsx  idbStore.ts  index.css  periodStore.ts  periodTracker.test.ts  periodTracker.ts  sessionUtils.test.ts  sessionUtils.ts  strings.ts  vite-env.d.ts
web/src/components/: DayDetailPanel.tsx  MonthCalendar.tsx  SyncSettings.tsx
(+85 files in other folders)
